--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    
+    <form>
+        <input type="text" id='userInput'>
+        <button type='submit' class='btn btn-default'>Submit</button>
+    </form>
     <script src='app.js'></script>
 </body>
 </html>
