--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <input type="text" id='userInput'>
         <button type='submit' class='btn btn-default'>Submit</button>
     </form>
+    <hr>
+    <p id='current-word'></p>
     <script src='app.js'></script>
 </body>
 </html>
