--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <form>
-        <input type="text" id='userInput'>
+
+    <p id='current-word' class='display-4 d-flex justify-content-center'></p>
+
+    <form class='inputForm w-100 d-flex justify-content-center' autocomplete='off'>
+        <input type="text" id='userInput' class='display-4 bg-dark text-green w-100 text-center' autofocus>
     </form>
-    <hr>
-    <p id='current-word'></p>
+
     <script src='app.js'></script>
 </body>
 </html>
