Further cleaned up code by removing unnecessary javascript and condensing redundant javascript. Removed redundant css classes and replaced with default bootstrap classes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <p id='current-word' class='display-4 d-flex justify-content-center'></p>
+    <p id='current-word' class='display-4 position-fixed'></p>
 
     <form class='inputForm w-100 d-flex justify-content-center' autocomplete='off'>
         <input type="text" id='userInput' class='display-4 bg-dark text-green w-100 text-center' autofocus>
