Moved challengeWords array to its own document

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id='userInput' class='display-4 bg-dark text-green w-100 text-center' autofocus>
     </form>
 
+    <script src='challengeWords.js'></script>
     <script src='app.js'></script>
 </body>
 </html>
