Replaced horizontal scrolling with vertical falling effect.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,16 @@
         </header>
 
         <main class='h-70'>
-            <div class="h-20">
-                
+            <div class="h-100 row">
+                <div id='col0' class="col-md-1 h-100"></div>
+                <div id='col1' class="col-md-2 h-100"></div>
+                <div id='col2' class="col-md-2 h-100"></div>
+                <div id='col3' class="col-md-2 h-100"></div>
+                <div id='col4' class="col-md-2 h-100"></div>
+                <div id='col5' class="col-md-2 h-100"></div>
+                <div id='col6' class="col-md-1 h-100"></div>
             </div>
-            <div id='div2' class="h-20">
 
-            </div>
-            <div class="h-20">
-
-            </div>
-            <div class="h-20">
-
-            </div>
-            <div class="h-20">
-
-            </div>
             
         </main>
 
